[tool.poetry]
name = "msigen"

version = "0.2.4"

description = "A package for converting spectrometry imaging line scan data files to a visualizable format"
authors = ["Emerson Hernly <elhernly@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/LabLaskin/MSIGen"
homepage = "https://github.com/LabLaskin/MSIGen"

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Development Status :: 4 - Beta",
  "Natural Language :: English",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
]

include=['GUI shortcuts', 'tests']

[tool.poetry.dependencies]
python = ">=3.9.0, <3.12"
numpy = ">=1.23.5"
pandas = ">=2.0.0"
scipy = ">=1.10.1"
multiplierz = "2.2.2"
opentimspy = "1.0.15"
pymzml = ">=2.5.2, <2.5.7"
tqdm = ">=4.65.0"
scikit-image = ">=0.19.0"
numba = ">=0.56.1"
ipython = ">=8.12.0"
opentims_bruker_bridge = ">=1.1.0"
pywin32 = "306"

[tool.poetry.urls]
Homepage = "https://github.com/EmersonHernly/MSIGen"
Issues = "https://github.com/EmersonHernly/MSIGen/issues"

[tool.poetry.scripts]
run-MSIGen-gui = "src.GUI:run_GUI"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


